Home page prototype is created

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,11 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<%# navbar %>
+<div class="container">
+  <div>
+    <h1>What is Pick-A-Piggy?</h1>
+  </div>
+  <div>
+    <p>Are you feeling down and would like some company?</p>
+    <p>Does your child love pigs and would love to spend a day with one?</p>
+    <h3>Pick-A-Piggy is here to unite you with the perfect piggy!</h3>
+  </div>
+</div>
