--- a/app/views/pigs/show.html.erb
+++ b/app/views/pigs/show.html.erb
@@ -1,7 +1,7 @@
 <%# navbar %>
 <div class="container">
   <div class="pig-photo-show">
-  <%# img %>
+    <%= cl_image_tag @pig.photo.key %>
   </div>
   <div class="pig-info-show">
     <h2><%= @pig.name %></h2>
@@ -15,6 +15,6 @@
     <div class="details">
     <p><%= @pig.details %></p>
     </div>
-    
+
   </div>
 </div>
