--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   background: rgb(230, 195, 235);
   border-width: 10px;
+  box-shadow: 4px 4px 4px white;
 }
 
 // Aqui a dropddown do avatar
