--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,3 +1,4 @@
 .banner {
   background-image: url('https://i.pinimg.com/564x/26/bd/66/26bd666b13b3e02aa238ac05809f14e6.jpg');
+  background-size: cover;
 }
