--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,8 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-pig">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://img.freepik.com/vetores-premium/desenho-de-porco-feliz_160606-374.jpg?w=1380" %>
-    <% end %>
+    <div class="navbar-brand">
+      <%= image_tag("pig_icon.png") %>
+    </div>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,35 +10,31 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <%= link_to "Home", home_path, class: "nav-link" %>
+        </li>
 
+        <li class="nav-item">
+          <%= link_to "All Pigs", pigs_path, class: "nav-link" %>
+        </li>
+
+        <%# Se o user estiver logado: %>
         <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
-          </li>
           <li class="nav-item dropdown">
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
+              <%= link_to "My Profile", "#", class: "dropdown-item" %>
+              <%= link_to "My Pigs", "#", class: "dropdown-item" %>
+              <%= link_to "My Bookings", "#", class: "dropdown-item" %>
               <%= link_to "Log out", "#", class: "dropdown-item", data: {turbo_method: :delete} %>
             </div>
           </li>
+
+        <%# Se o user não estiver logado: %>
         <% else %>
-
-          <!--li class="nav-item"-->
-            <%= link_to "Home Page", new_user_session_path, class: "nav-link" %>
-          <!--/li-->
-
-          <!--li class="nav-item"-->
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          <!--/li-->
-
-          <!--li class="nav-item"-->
-            <%= link_to "Reservas", new_user_session_path, class: "nav-link" %>
-          <!--/li-->
+        <li class="nav-item">
+          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+        </li>
 
         <% end %>
       </ul>
