home page design done

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,7 +1,13 @@
 
 <div class="banner">
-  <div class="container">
-    <h1 style="margin-bottom: 400px">Find your pig!</h1>
-      <a class="btn btn-ghost" href="/users/sign_up">Sign up</a>
+  <div class="banner-content">
+    <h1>Pick-A-Piggy</h1>
+    <p class="mb-5">oinc! oinc!</p>
+    <%= link_to "#sample-pigs", style: "text-decoration-color: white" do %>
+      <div class="text-center">
+        <p class="m-0">See our beautiful pigs</p>
+        <i class="fa-solid fa-angle-down down-icon"></i>
+      </div>
+    <% end %>
   </div>
 </div>
