--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,4 +1,32 @@
 .banner {
-  background-image: url('https://i.pinimg.com/564x/26/bd/66/26bd666b13b3e02aa238ac05809f14e6.jpg');
   background-size: cover;
+  background-position: center;
+  height: 500px;
+  margin-top: 0px;
+  margin-bottom: 90px;
+  background-image: linear-gradient(-250deg, rgba(153,102,204,0.5) 0%, rgba(40,40,61,0.2) 90%),url('https://wallpaperaccess.com/full/340231.jpg');
+
+  h1 {
+    padding-top: 200px;
+    color: rgb(255, 255, 255);
+    font-family: Palanquin Dark;
+    text-shadow: 1px 1px 3px rgb(0, 0, 0);
+    font-size: 80px;
+    text-align: center;
+    font-style: normal;
+    font-weight: 400;
+  }
+
+  p {
+    color: rgb(255, 255, 255);
+    font-family: Palanquin Dark;
+    text-shadow: 1px 1px 3px rgb(0, 0, 0);
+    font-size: 25px;
+    text-align: center;
+    letter-spacing: 4px;
+  }
+
+  .down-icon {
+    color: white; text-shadow: 1px 1px 3px black;
+  }
 }
