index kinda done, background missing

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,4 +3,10 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
+@import "card";
 @import "banner";
+
+.header {
+  text-align: center;
+  padding: 50px;
+}
