background kinda done

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,4 +1,7 @@
 // Import page-specific CSS files here.
 @import "home";
 
-
+.background {
+  background-image: url("https://img.freepik.com/premium-vector/cute-pig-seamless-pattern-background_42349-721.jpg?w=740");
+  background-repeat: repeat;
+}
