--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 30px;
+  padding-bottom: 50px;
 }
 
 .card-pig {
@@ -12,7 +13,13 @@
 
 .card-pig img {
   width: 100%;
+  height: 100%;
   border-radius: 10px 10px 0px 0px;
+}
+
+.pig-image {
+  width: 250px;
+  height: 200px
 }
 
 .card-pig-info {
