--- a/app/views/pigs/index.html.erb
+++ b/app/views/pigs/index.html.erb
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="background">
+<div class="container index-container">
 
   <div class="header">
     <h1>Pick your piggy!</h1>
@@ -24,4 +25,5 @@
       <% end %>
     <% end %>
   </div>
+</div>
 </div>
