changes to navbar, index page, footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
 
   <body>
     <%= render "shared/navbar" %>
+    <section style="padding-top: 60px;">
     <%= yield %>
+    </section>
     <%= render "shared/footer" %>
   </body>
 </html>
