--- a/app/views/pigs/index.html.erb
+++ b/app/views/pigs/index.html.erb
@@ -3,6 +3,7 @@
     <div class="header mt-4">
       <h1>Pick your piggy!</h1>
     </div>
+  </div>
 
     <div class="cards-container mb-4">
       <% @pigs.each do |pig| %>
