--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-pig">
+<div class="navbar navbar-expand-sm navbar-light navbar-pig fixed-top">
   <div class="container-fluid">
     <div class="navbar-brand">
       <%= image_tag("pig_icon.png") %>
