--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,25 +2,25 @@
 .cards-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 30px;
+  grid-gap: 20px;
   padding-bottom: 50px;
 }
 
 .card-pig {
-  width: 250px;
+  width: 300px;
   background-color: white;
   border-radius: 10px
 }
 
 .card-pig img {
   width: 100%;
-  height: 200px;
+  height: 170px;
   border-radius: 10px 10px 0px 0px;
 }
 
 .pig-image {
-  width: 250px;
-  height: 200px
+  // width: 250px;
+  // height: 200px
 }
 
 .card-pig-info {
