--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,13 +3,15 @@
   //display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 40px;
+  height: 50px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
 }
 .footer-links {
   display: flex;
   align-items: center;
+  justify-content: space-around;
+  padding: 5px;
 
   li {
     list-style: none;
@@ -19,7 +21,7 @@
   color: black;
   opacity: 0.20;
   text-decoration: none;
-  font-size: 24px;
+  font-size: 13px;
   padding: 0px 10px;
 }
 .footer-links a:hover {
