--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -15,33 +15,33 @@
 }
 
 
-.card-trip {
+.card-piggy {
   height: 500px;
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
-.card-trip > img {
+.card-piggy > img {
   height: 350px;
   width: 100%;
   object-fit: cover;
 }
 
-.card-trip h2 {
+.card-piggy h2 {
   font-size: 16px;
   font-weight: bold;
   margin: 0;
 }
 
-.card-trip p {
+.card-piggy p {
   font-size: 12px;
   opacity: .7;
   margin: 0;
 }
 
 
-.card-trip .card-trip-infos {
+.card-piggy .card-piggy-infos {
   padding: 16px;
   display: flex;
   justify-content: space-between;
@@ -49,7 +49,7 @@
   position: relative;
 }
 
-.card-trip-infos .card-trip-user {
+.card-piggy-infos {
   position: absolute;
   right: 16px;
   top: -20px;
