--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -5,7 +5,7 @@
     <p class="mb-5">oinc! oinc!</p>
     <%= link_to "#sample-pigs", style: "text-decoration-color: white" do %>
       <div class="text-center">
-        <p class="m-0">See our beautiful pigs</p>
+        <p class="m-0">Learn about us</p>
         <i class="fa-solid fa-angle-down down-icon"></i>
       </div>
     <% end %>
