alterei a cor do fundo e dos links

--- a/app/assets/stylesheets/components/_pigcard.scss
+++ b/app/assets/stylesheets/components/_pigcard.scss
@@ -42,3 +42,9 @@ a {
 .card-shadow {
   box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.2);
 }
+
+.piggy-link {
+  &:hover {
+    color: rgb(117, 59, 122);
+  }
+}
