--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -8,7 +8,7 @@
 
   h1 {
     padding-top: 200px;
-    color: rgb(255, 255, 255);
+    color: white;
     font-family: Palanquin Dark;
     text-shadow: 1px 1px 3px rgb(0, 0, 0);
     font-size: 80px;
@@ -18,7 +18,7 @@
   }
 
   p {
-    color: rgb(255, 255, 255);
+    color: white;
     font-family: Palanquin Dark;
     text-shadow: 1px 1px 3px rgb(0, 0, 0);
     font-size: 25px;
