--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,27 +3,28 @@
   //display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 50px;
+  height: 100px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
 }
 .footer-links {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  padding: 5px;
+  margin-left: 150px;
+  // justify-content: space-around;
+  padding-top: 20px;
 
   li {
     list-style: none;
+    font-size: 13px;
+    padding: 0px 10px;
   }
 }
 .footer-links a {
   color: black;
   opacity: 0.20;
   text-decoration: none;
-  font-size: 13px;
-  padding: 0px 10px;
 }
 .footer-links a:hover {
-  opacity: 1;
+  opacity: 0.5;
 }
