--- a/app/assets/stylesheets/pigs/_home.scss
+++ b/app/assets/stylesheets/pigs/_home.scss
@@ -1,9 +1,7 @@
 // Here's where the CSS for your index is
 .background {
-  background-image: url("https://img.freepik.com/premium-vector/cute-pig-seamless-pattern-background_42349-721.jpg?w=740");
-  background-repeat: repeat;
+  background-color: rgb(248, 244, 247);
 }
-
 .header {
   text-align: center;
   padding: 50px;
