--- a/app/assets/stylesheets/components/_showcard.scss
+++ b/app/assets/stylesheets/components/_showcard.scss
@@ -2,23 +2,27 @@
   align-content: center;
   padding: 15px;
   margin: 100px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
 }
 
 .pig-name {
-  font-style: oblique;
   font-weight: bold;
-  text-shadow: 2px 2px 2px rgb(230, 195, 235);
 }
 
 .card-piggy{
   position: relative;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
 }
 
 .card-piggy > img {
+  height: 480px;
   width: 100%;
-  height: 100%;
   object-fit: fill;
   object-position: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   border-radius: 15px;
 }
 
@@ -35,12 +39,12 @@
 // }
 
 .card-piggy-infos {
-  margin: 10px;
   padding: 8px 12px;
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   border-radius: 15px;
+  margin-bottom: 10px;
 }
 
 .card-piggy-price {
@@ -48,15 +52,14 @@
   bottom: -17px;
   left: 0px;
   font-size: 30px !important;
-  font-weight: bold;
   background-color: white;
   border-bottom-left-radius: 15px;
   border-top-right-radius: 15px;
+  padding: 10px;
 }
 
 .booking {
   padding: 15px;
-  margin: 10px;
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
@@ -70,4 +73,49 @@
   background: white;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   border-radius: 15px;
+}
+
+.btn-ghost {
+  color: #4A4A4A;
+  border: 1px solid #4A4A4A;
+  padding: 8px 24px;
+  border-radius: 50px;
+  font-weight: lighter;
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+}
+
+.btn-ghost:hover {
+  opacity: 1;
+}
+
+.btn-flat {
+  color: rgb(0, 0, 0);
+  padding: 8px 24px;
+  border-radius: 4px;
+  background: #E6C3EB;
+  transition: background 0.3s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn-flat:hover {
+  background: #ad7ab4;
+  color: white;
+}
+
+.btn-gradient {
+  color: white;
+  padding: 8px 24px;
+  border-radius: 4px;
+  font-weight: bold;
+  background: linear-gradient(#167FFB, #0F60C4);
+  transition: background 0.3s ease;
+  border: 1px solid #0F60C4;
+}
+
+.btn-gradient:hover {
+  background: linear-gradient(#147EFF, #0F67DA);
+  color: white;
 }
