--- a/app/assets/stylesheets/components/_pigcard.scss
+++ b/app/assets/stylesheets/components/_pigcard.scss
@@ -4,30 +4,34 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
   padding-bottom: 50px;
+  margin-right: 5%;
+  margin-left: 5%;
 }
 
 .card-pig {
-  width: 300px;
+  width: 100%;
   background-color: white;
-  border-radius: 10px
+  border-radius: 10px;
+  margin: 2%;
 }
 
 .card-pig img {
   width: 100%;
-  height: 170px;
+  height: 100%;
   border-radius: 10px 10px 0px 0px;
 }
 
 .pig-image {
-  // width: 250px;
-  // height: 200px
+  width: 100%;
+  height: 75%;
 }
 
 .card-pig-info {
   display: flex;
   padding: 10px;
+  height: 25%;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .card-pig-info h2, .card-pig-info p {
@@ -36,7 +40,7 @@
 
 a {
   text-decoration: none;
-  color: rgb(54, 27, 66)
+  color: rgb(54, 27, 66);
 }
 
 .card-shadow {
