--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -9,7 +9,7 @@
 .navbar-pig .navbar-collapse {
   flex-grow: 0;
   align-content: center;
-    height: 30px;
+  height: 15%;
   overflow: hidden;
 }
 
