--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,6 @@
 <div class="footer">
-  <div class="row footer-links">
-    <div class="col-6">
-      <ul>
+  <div class="footer-links">
+        <p>Made with love  |  Pick-A-Piggy</p>
         <li>
           <a href="#"><i class="fab fa-instagram"></i> @pickapiggy </a>
         </li>
@@ -11,17 +10,5 @@
         <li>
           <a href="#"><i class="fab fa-twitter"></i> @pickapiggy </a>
         </li>
-      </ul>
-    </div>
-    <div class="col-6">
-      <ul>
-        <li>
-          <i class="fa-solid fa-location-dot"></i> Rua do Conde de Redondo 91B, 1150-103 Lisboa
-        </li>
-        <li>
-          <i class="fa-solid fa-phone"></i> +351 *** *** ***
-        </li>
-      </ul>
-    </div>
   </div>
 </div>
