--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,30 +1,32 @@
 .footer {
   background: rgb(230, 195, 235);
-  //display: flex;
+  display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 83px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
 }
 .footer-links {
   display: flex;
   align-items: center;
-  margin-left: 150px;
-  // justify-content: space-around;
-  padding-top: 20px;
+  justify-content: space-between;
+  width: 80%;
 
   li {
     list-style: none;
     font-size: 13px;
-    padding: 0px 10px;
+    padding: 0px 50px;
+    display: flex;
+    align-items: center;
   }
 }
 .footer-links a {
   color: black;
   opacity: 0.20;
   text-decoration: none;
+  align-items: center;
 }
 .footer-links a:hover {
-  opacity: 0.5;
+  opacity: 0.6;
 }
