--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,13 @@
 // Specific CSS for your home-page
 .intro {
   text-align: center;
+  font-style: normal;
   font-family: Palanquin Dark;
+  //letter-spacing: 2px;
+}
+
+.fa-heart{
+  color: red;
 }
 
 .card-samples {
@@ -12,6 +18,10 @@
 }
 
 .body h1, h2, h3, p {
-  color: rgb(54, 27, 66);
+  color: rgb(0, 0, 0);
+  text-align: center;
 }
 
+.h3-sign{
+  margin-bottom: 1.5rem;
+}
