--- a/app/assets/stylesheets/components/_showcard.scss
+++ b/app/assets/stylesheets/components/_showcard.scss
@@ -18,9 +18,9 @@
 }
 
 .card-piggy > img {
-  height: 480px;
+  height: 520px;
   width: 100%;
-  object-fit: fill;
+  object-fit: cover;
   object-position: center;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   border-radius: 15px;
@@ -118,4 +118,10 @@
 .btn-gradient:hover {
   background: linear-gradient(#147EFF, #0F67DA);
   color: white;
+}
+
+.card-piggy-right {
+  height: 520px;
+  display: flex;
+  flex-direction: column;
 }
