--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,12 +7,12 @@
 }
 
 .fa-heart{
-  color: red;
+  color: rgb(94, 14, 78);
 }
 
 .card-samples {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px
 }
@@ -25,3 +25,4 @@
 .h3-sign{
   margin-bottom: 1.5rem;
 }
+
