--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="footer">
   <div class="footer-links">
-        <p>Made with love  |  Pick-A-Piggy</p>
+        <p class="made-with m-0"> Made with love  |  Pick-A-Piggy</p>
         <li>
           <a href="#"><i class="fab fa-instagram"></i> @pickapiggy </a>
         </li>
