--- a/app/assets/stylesheets/components/_pigcard.scss
+++ b/app/assets/stylesheets/components/_pigcard.scss
@@ -1,5 +1,5 @@
 
-.cards-container {
+.cards-container, .card-samples {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
@@ -19,23 +19,26 @@
   width: 100%;
   height: 100%;
   border-radius: 10px 10px 0px 0px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .pig-image {
   width: 100%;
-  height: 75%;
+  height: 220px;
 }
 
 .card-pig-info {
   display: flex;
   padding: 10px;
-  height: 25%;
+  // height: 25%;
   justify-content: space-between;
   align-items: center;
 }
 
 .card-pig-info h2, .card-pig-info p {
   margin: 0;
+  justify-self: flex-start;
 }
 
 a {
