--- a/app/assets/stylesheets/components/_pigcard.scss
+++ b/app/assets/stylesheets/components/_pigcard.scss
@@ -23,13 +23,13 @@
 
 .pig-image {
   width: 100%;
-  height: 75%;
+  height: 220px;
 }
 
 .card-pig-info {
   display: flex;
   padding: 10px;
-  height: 25%;
+  // height: 25%;
   justify-content: space-between;
   align-items: center;
 }
