--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,7 +1,8 @@
 .btn-pink {
   background: $pink;
   border-radius: 4px;
-  padding: 3px;
+  padding: 5px 10px 5px 10px;
+  transition: 0.3s;
 }
 
 .btn-pink:hover{
