--- a/app/assets/stylesheets/components/_showcard.scss
+++ b/app/assets/stylesheets/components/_showcard.scss
@@ -73,6 +73,9 @@
   background: white;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   border-radius: 15px;
+  h3, p {
+    text-align: left;
+  }
 }
 
 .btn-ghost {
@@ -124,4 +127,8 @@
   height: 520px;
   display: flex;
   flex-direction: column;
+}
+
+.piggy-map {
+  margin-top: 20px;
 }
