--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,28 +10,29 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <%= link_to "Home", home_path, class: "nav-link" %>
-        </li>
-
-        <li class="nav-item">
-          <%= link_to "All Pigs", pigs_path, class: "nav-link" %>
-        </li>
-
         <%# Se o user estiver logado: %>
         <% if user_signed_in? %>
-          <li class="nav-item dropdown">
+          <li class="nav-item active">
+            <%= link_to "Home", home_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "All Pigs", pigs_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item dropdown d-flex align-items-center">
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "My Profile", "#", class: "dropdown-item" %>
-              <%= link_to "My Pigs", "#", class: "dropdown-item" %>
-              <%= link_to "My Bookings", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: { turbo_method: :delete } %>
-            </div>
+          <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+            <%= link_to "My Profile", "#", class: "dropdown-item" %>
+            <%= link_to "My Pigs", "#", class: "dropdown-item" %>
+            <%= link_to "My Bookings", "#", class: "dropdown-item" %>
+            <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: { turbo_method: :delete } %>
+          </div>
           </li>
 
         <%# Se o user não estiver logado: %>
         <% else %>
+        <li class="nav-item">
+            <%= link_to "Home", home_path, class: "nav-link" %>
+        </li>
         <li class="nav-item">
           <%= link_to "Login", new_user_session_path, class: "nav-link" %>
         </li>
