--- a/app/views/pigs/show.html.erb
+++ b/app/views/pigs/show.html.erb
@@ -35,7 +35,7 @@
           </form>
         </div>
       </div>
-      <div class="piggy-map" style="width: 100%; height: 600px;"
+      <div class="piggy-map" style="width: 100%; height: 50vh;"
             data-controller="map"
             data-map-markers-value="<%= @markers.to_json %>"
             data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
