alterei os forms do log in e do sign up, está tudo alinhado e no centro

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -9,3 +9,12 @@
   background: #AD7AB4;
   color: white;
 }
+
+.btn-aux {
+  background: none;
+  text-decoration: underline $pink;
+  &:hover {
+    font-weight: bold;
+    color: $black;
+  }
+}
