--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -25,3 +25,10 @@
 .form-control {
   border-radius: 30px 30px 30px 30px;
 }
+
+.session-card {
+  box-shadow: 0px 0px 20px $pink;
+  border-radius: 12px;
+  padding: 14px 16px;
+  width: 300px;
+}
