--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,9 +1,13 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <div class="d-flex justify-content-center my-3 pb-2">
+    <%= link_to "Log in", new_session_path(resource_name), class: "btn-aux" %><br />
+  </div>
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name), class: "btn btn-flat", style:"margin: 10px" %><br />
+  <div class="d-flex justify-content-center my-3 pb-2">
+    <%= link_to "Sign up", new_registration_path(resource_name), class: "btn-aux" %><br />
+  </div>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
