--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -27,7 +27,7 @@
 }
 
 .session-card {
-  box-shadow: 0px 0px 20px $pink;
+  box-shadow: $shadow;
   border-radius: 12px;
   padding: 14px 16px;
   width: 300px;
