fiz tudo o que era para fazer

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,4 +1,8 @@
 .footer {
+  bottom: 0;
+  left: 0;
+  height: 40px;
+  width: 100%;
   background: $pink;
   display: flex;
   align-items: center;
