--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <section style="padding-top: 100px;min-height: 100vh;">
+    <section style="padding-top: 100px">
     <%= yield %>
     </section>
     <%= render "shared/footer" %>
